# ParaCL

./: CMakeLists.txt  LICENSE  README-RU.md  README.md
definitions/: CMakeLists.txt  LanguageErrors.cpp  lexer.cpp  parser.cpp  simulator.cpp
include/: LanguageErrors.hpp  lexer.hpp  parser.hpp  simulator.hpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
